# django-formulaic

./: .gitignore  Dockerfile  Dockerfile-1-8  LICENSE  MANIFEST.in  README.md  boot_django.py  docker-compose.yml  makemigrations.py  requirements.txt  requirements_1.8.txt  setup.cfg
example_project/: README.md  admin.py  settings.py  urls.py  views.py
example_project/templates/: form-complete.html  form.html  registration.html
formulaic/: admin.py  apps.py  auto_populate.py  beanstalk_jobs.py  csv_export.py  exceptions.py  fields.py  forms.py  models.py  rules.py  serializers.py  settings.py  signals.py  urls.py  utils.py  validators.py  views.py  widgets.py
formulaic/admin_src/formulaic-react/: .babelrc  package-lock.json  package.json  webpack.config.js
formulaic/admin_src/formulaic-react/src/: App.css  App.js
formulaic/admin_src/formulaic-react/src/app/: store.js
formulaic/migrations/: 0001_initial.py  0002_add_default_to_field_enabled.py  0003_auto_20201230_1406.py  0004_submission_promo_source.py  0005_alter_form_archived.py  0005_alter_form_archived_alter_ruleresult_field.py  0006_alter_field_display_name.py
formulaic/static/admin/formulaic/adapters/: application.js  field.js  optionlist.js  rule.js  submissionsource.js
formulaic/static/admin/formulaic/css/: admin.css  edit_fields.css  form.css
formulaic/static/admin/formulaic/ember-formulaic/: .eslintcache  README.md  bower.json  ember-cli-build.js  package-lock.json  package.json
formulaic/static/admin/formulaic/ember-formulaic-bckp/: .ember-cli  README.md  ember-cli-build.js  npm-shrinkwrap.json
formulaic/static/admin/formulaic/js/: edit_fields.js  form.js
formulaic/static/formulaic/css/: bootstrap.css  bootstrap.min.css  custom_form.css  gate-form.css
formulaic/static/formulaic/js/: custom_form.js  phoneNumber.js
formulaic/static/formulaic/react_components/: fields.js
formulaic/static/initializers/: cookie-initializer.js  custom-auto-location.js
formulaic/templates/admin/formulaic/form/: change_fields.html  change_form.html  (+2 more)
formulaic/templates/formulaic/: bootstrap-form.html  form.html  gate-form.html  react.html
formulaic/templatetags/: form.py  setting_tags.py
formulaic/tests/: __init__.py  test_csv_export.py  test_forms.py  test_models.py  test_validators.py  test_views.py
(+231 files in other folders)
