[metadata]
name = django-formulaic
version = 0.1.0
description = A Django app for building custom web forms and collecting submissions.
long_description = file: README.md
url = https://github.com/Govexec/django-formulaic
author = Bryan Scott
author_email = bscott@govexec.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=2.7
install_requires =
    Django >= 1.8
    django-admin-ordering==0.13.1
    django-ckeditor>=5.9.0
    django-filter>=1.1.0
    djangorestframework>=3.11.2
    nameparser>=0.3.16
    raven==6.10.0
    pyzipcode==2.0.0
    us==0.9.1
    beautifulsoup4==4.4.1
    tzlocal>=1.2.2
    phonenumbers>=8.12.40
    six
